hphp/hack/test/typecheck/ppl/meth_caller.php.exp
File "meth_caller.php", line 8, characters 10-38:
meth_caller cannot be used with a <<__PPL>> class (Typing[4272])
